grade-reports/exam-2/test-hard-04.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/apate295
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is hard-04
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/hard-04/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/apate295/grade-.7G4
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o hard.o hard.cpp
hard.cpp: In function ‘void intersection(LinkedList*, LinkedList*, LinkedList&)’:
hard.cpp:21:19: error: ‘class LinkedList’ has no member named ‘data’
          if(temp->data == temp2->data)
                   ^~~~
hard.cpp:21:34: error: ‘class LinkedList’ has no member named ‘data’
          if(temp->data == temp2->data)
                                  ^~~~
hard.cpp:23:34: warning: passing NULL to non-pointer argument 1 of ‘LinkedList::LinkedList(int)’ [-Wconversion-null]
                  if(intersect == NULL)
                                  ^~~~
hard.cpp:25:31: error: base operand of ‘->’ has non-pointer type ‘LinkedList’
                      intersect->head = temp;
                               ^~
hard.cpp:26:22: error: ‘head’ was not declared in this scope
                      head->next->next = NULL;
                      ^~~~
hard.cpp:29:18: error: ‘head’ was not declared in this scope
                  head->next = temp;
                  ^~~~
hard.cpp:34:26: error: ‘class LinkedList’ has no member named ‘next’
              temp= temp->next;
                          ^~~~
hard.cpp:37:21: error: ‘class LinkedList’ has no member named ‘next’
      temp2 = temp2->next;
                     ^~~~
<builtin>: recipe for target 'hard.o' failed
make: *** [hard.o] Error 1
Could not compile hard.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
